# portalbd

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/actions/setup-nix/: action.yml
.github/workflows/: ci.yml  nightly.yml
docs/: architecture.md  slatedb-checkpoint.md  slatedb.md  tigerstyle.md
nbd/: Cargo.toml
nbd/src/: client.rs  device.rs  lib.rs  protocol.rs
nix/: package.nix  pjdfstest.nix
nix/flake/: nixos-modules.nix  overlays.nix  packages.nix  tests.nix
nix/nixos/: portalbd.nix
nix/nixos/tests/: basic.nix  crash-recovery.nix  csi-k3s.nix  csi-node.nix  network-test.nix  pjdfs.nix  resource-exhaustion.nix  snapshot-semantics.nix  trace-minecraft.nix  trace-mkfs.nix  trace-pgbench.nix
portalbd/: Cargo.toml  clippy.toml
portalbd-csi/: Cargo.toml  build.rs
portalbd-csi/src/: controller.rs  error.rs  identity.rs  lib.rs  main.rs  node.rs  test_util.rs  types.rs  volume.rs
portalbd-csi/src/driver/: mod.rs  state.rs
portalbd-dst/: Cargo.toml
portalbd-dst/src/: lib.rs  simulation.rs
portalbd-dst/src/harness/: block_store.rs  mod.rs  nbd.rs
portalbd-trace/: Cargo.toml
portalbd-trace/src/: lib.rs  replay.rs
portalbd/src/: config.rs  control.rs  daemon.rs  error.rs  lib.rs  types.rs
portalbd/src/nbd/: handler.rs  listener.rs  mod.rs  server.rs
portalbd/src/record/: middleware.rs  mod.rs  recorder.rs  types.rs
portalbd/src/store/: block_store.rs  flush_queue.rs  mod.rs
