[workspace]
members = ["portalbd", "portalbd-csi", "portalbd-dst", "portalbd-trace", "nbd"]
default-members = ["portalbd", "portalbd-csi", "portalbd-trace", "nbd"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "tracing", "net"] }

# Storage - SlateDB on object storage
slatedb = { git = "https://github.com/jachewz/slatedb.git", branch = "restore-checkpoint", features = ["lz4", "snappy", "zstd"] }
object_store = { version = "0.12.4", features = ["aws", "azure", "gcp"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
async-trait = "0.1"
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
rand = { version = "0.9", features = ["small_rng"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Testing
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }
