[package]
name = "portalbd-dst"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Deterministic Simulation Testing for portalbd"

[dependencies]
portalbd = { path = "../portalbd" }
nbd = { path = "../nbd" }
tokio.workspace = true
object_store.workspace = true
bytes.workspace = true
rand.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true
