[package]
name = "portalbd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "High-performance NBD block device with volume, snapshot, and restore support"

[dependencies]
nbd = { path = "../nbd" }
async-trait.workspace = true
tokio.workspace = true
slatedb.workspace = true
object_store.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
uuid.workspace = true
parking_lot.workspace = true
chrono.workspace = true
url.workspace = true
rand.workspace = true
clap.workspace = true

# Profiling (optional, enabled via --profile flag)
pprof = { version = "0.14", features = ["flamegraph", "prost-codec"] }

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "portalbd"
path = "src/bin/portalbd.rs"

[[bin]]
name = "portalctl"
path = "src/bin/portalctl.rs"

[lib]
name = "portalbd"
path = "src/lib.rs"
